<?xml version='1.0' encoding='utf-8' ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/aboutapp">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share_white_24"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_stars_black_24dp"
                android:title="@string/nav_rate" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/nav_send" />
        </menu>
    </item>
    <item android:title="@string/Aboutdeveloper">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_person_black_24"
                android:title="@string/nav_about" />

        </menu>
    </item>

    <item
        android:id="@+id/nav_close"
        android:icon="@drawable/ic_close_black_24dp"
        android:title="@string/nav_close" />
</menu>
