<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:gravity="center"
    tools:context=".Activity.Add_ChannelActivity">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignWithParentIfMissing="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:scaleType="centerCrop"
                android:src="@mipmap/add_btn" />

            <EditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_margin="20dp"
                android:background="@drawable/input_outline"
                android:hint="@string/channel_title"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_title"
                android:layout_margin="20dp"
                android:background="@drawable/input_outline"
                android:hint="@string/link_channel"
                android:padding="16dp"
                android:textColor="@android:color/black" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_link"
                android:layout_margin="20dp"
                android:background="@drawable/input_outline"
                android:padding="16dp"
                android:textColor="@android:color/black" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_category"
                android:layout_margin="20dp"
                android:background="@drawable/input_outline"
                android:padding="16dp"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:padding="20dp"
                android:text="@string/submit"
                android:textColor="@android:color/white" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>